# RepoFix

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: build-binaries.yml  publish-pypi.yml
packaging/: repofix.spec
scripts/: build_binary.sh  install.sh  install_binary.sh
src/repofix/: __init__.py  cli.py  config.py  shell_completion_auto.py
src/repofix/branch/: __init__.py  cache.py
src/repofix/core/: artifact_installer.py  docker_compose_bind_fix.py  executor.py  git.py  install_fallback.py  make_shellflags_fix.py  process_registry.py  runner.py
src/repofix/detection/: artifacts.py  commands.py  deploy_mode.py  environment.py  multi.py  readme_util.py  stack.py
src/repofix/env/: manager.py  port.py  venv.py
src/repofix/fixing/: ai_fixer.py  classifier.py  detector.py  llm_cloud.py  llm_json.py  local_llm.py  retry.py  rules.py  safety.py
src/repofix/memory/: store.py
src/repofix/output/: display.py
tests/: conftest.py  test_install_fallback.py  test_make_shellflags_fix.py  test_shell_completion_auto.py
tests/test_core/: test_docker_compose_bind_fix.py
tests/test_detection/: test_commands.py  test_multi.py  test_stack.py  test_venv.py
tests/test_env/: test_npm_prefix_writable.py
tests/test_fixing/: test_classifier.py  test_detector.py  test_go_mod_fix.py  test_llm_json.py  test_rules.py  test_safety.py
tests/test_output/: test_npm_global_prompt.py  test_npm_hint.py  test_npm_unwritable_prompt.py
