[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repofix"
version = "0.1.0"
description = "RepoFix — run any GitHub repo locally with one command; auto-detects stack, installs deps, self-heals errors"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RepoFix" }]
keywords = ["cli", "devtools", "github", "automation", "repofix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "gitpython>=3.1",
    "psutil>=5",
    "pydantic>=2",
    "pyyaml>=6",
    "toml>=0.10",
    "google-genai>=1.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/sriramnarendran/RepoFix"
Repository = "https://github.com/sriramnarendran/RepoFix"
Issues = "https://github.com/sriramnarendran/RepoFix/issues"
LLM = "https://raw.githubusercontent.com/sriramnarendran/RepoFix/main/llms.txt"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "build>=1",
    "twine>=5",
]

[project.scripts]
repofix = "repofix.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repofix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
